--- a/services.html
+++ b/services.html
@@ -31,30 +31,42 @@
       Check out some of our work! Click the images below to see some of our pages.
     </p>
     <div class="websites">
+
       <div class="website">
         <a href="https://bandedbeast.com" target="_blank">
           <img src="assets/bandedbeast.png" alt="Banded Beast">
         </a>
         <p>Banded Beast <a href="https://bandedbeast.com" target="_blank"></a></p>
       </div>
+
+      <div class="website" id="southerntrax">
+        <a href="https://southerntrax.com" target="_blank">
+          <img src="assets/southerntrax.png" alt="Southern Trax">
+        </a>
+        <p>Southern Trax <a href="https://southerntrax.com" target="_blank"></a></p>
+      </div>
+
       <div class="website">
         <a href="https://cottonwarehousemarket.com/" target="_blank">
           <img src="assets/cottonwarehouse.png" alt="Cotton Warehouse Market">
         </a>
         <p>Cotton Warehouse Market <a href="https://cottonwarehouse.com" target="_blank"></a></p>
       </div>
+
       <div class="website">
         <a href="https://regalconstructioncustomhomes.com" target="_blank">
           <img src="assets/regal.png" alt="Regal Construction">
         </a>
         <p>Regal Construction<a href="https://regalconstructioncustomhomes.com" target="_blank"></a></p>
       </div>
+
       <div class="website">
         <a href="https://servingchampions.github.io/MovieBuffs/index.html" target="_blank">
           <img src="assets/moviebuffs.png" alt="Movie Buffs">
         </a>
         <p>Movie Buffs <a href="https://servingchampions.github.io/MovieBuffs/blog.html" target="_blank"></a></p>
       </div>
+
     </div>
   </section>
 </main>
