--- a/about.html
+++ b/about.html
@@ -33,10 +33,10 @@
       <img src="assets/tennis.png" alt="Stephen Chavez playing tennis">
     </section>
     <p>
-      Serving Champions was found by, Stephen Chavez, a devoted Christian who finds profound joy in sharing his faith through his work and his love for helping others. He continually acknowledges that without God's grace, he would not have the ability to serve others and strives to live a life following Jesus Christ. 
+      Serving Champions was founded by, Stephen Chavez, a devoted Christian who finds profound joy in sharing his faith through his work and his love for helping others. He continually acknowledges that without God's grace, he would not have the ability to serve others and strives to live a life following Jesus Christ. 
     </p>
     <p>
-      Serving Champions was founded by Stephen Chavez, a dedicated professional with a diverse background in both the political and business worlds. Stephen, a proud graduate of the University of Mississippi with Cum Laude honors in Public Policy Leadership, began his journey with a passion for politics. His early experience as a United States Senate Page ignited his ambition to make a significant impact in the political arena.
+      Stephen is a dedicated professional with a diverse background in both the political and business worlds. He is a proud graduate of the University of Mississippi with Cum Laude honors in Public Policy Leadership, began his journey with a passion for politics. His early experience as a United States Senate Page ignited his ambition to make a significant impact in the political arena.
     </p>
     <p>
       After graduating a year early to work with a national political party in Houston, Texas, Stephen honed his skills through various state-wide campaigns across Mississippi. His growing interest in the analytical side of campaigns led him to pursue specialized training in campaign data management. Stephen's expertise as a Data Director was further developed through managing campaigns and serving in multiple states, including Texas, West Virginia, Louisiana, and Mississippi.
