--- a/services.html
+++ b/services.html
@@ -47,10 +47,10 @@
       </div>
 
       <div class="website">
-        <a href="https://cottonwarehousemarket.com/" target="_blank">
-          <img src="assets/cottonwarehouse.png" alt="Cotton Warehouse Market">
+        <a href="https://servingchampions.github.io/SweetMagnoliaClayCompany/index.html" target="_blank">
+          <img src="assets/sweetmag.png" alt="Movie Buffs">
         </a>
-        <p>Cotton Warehouse Market <a href="https://cottonwarehouse.com" target="_blank"></a></p>
+        <p>Sweet Magnolia Clay Company <a href="https://servingchampions.github.io/SweetMagnoliaClayCompany/index.html" target="_blank"></a></p>
       </div>
 
       <div class="website">
@@ -65,6 +65,13 @@
           <img src="assets/moviebuffs.png" alt="Movie Buffs">
         </a>
         <p>Movie Buffs <a href="https://servingchampions.github.io/MovieBuffs/blog.html" target="_blank"></a></p>
+      </div>
+
+      <div class="website">
+        <a href="https://cottonwarehousemarket.com/" target="_blank">
+          <img src="assets/cottonwarehouse.png" alt="Cotton Warehouse Market">
+        </a>
+        <p>Cotton Warehouse Market <a href="https://cottonwarehouse.com" target="_blank"></a></p>
       </div>
 
     </div>
