--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="assets/sclogo.png">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
   <meta charset="utf-8">
-  <meta name="keywords" content="SWGC Portfolio">
+  <meta name="keywords" content="Serving Champions About">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap">
 </head>
@@ -33,7 +33,7 @@
       <img src="assets/tennis.png" alt="Stephen Chavez playing tennis">
     </section>
     <p>
-      Serving Champions was founded by, Stephen Chavez, a devoted Christian who finds profound joy in sharing his faith through his work and his love for helping others. He continually acknowledges that without God's grace, he would not have the ability to serve others and strives to live a life following Jesus Christ. 
+      Serving Champions was founded by, Stephen Chavez, a devoted Christian who finds profound joy in sharing his faith through his work, his love for helping others, and dreaming big. He continually acknowledges that without God's grace, he would not have the ability to serve others and strives to live a life following Jesus Christ. 
     </p>
     <p>
       Stephen is a dedicated professional with a diverse background in both the political and business worlds. He is a proud graduate of the University of Mississippi with Cum Laude honors in Public Policy Leadership, began his journey with a passion for politics. His early experience as a United States Senate Page ignited his ambition to make a significant impact in the political arena.
