--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="assets/sclogo.png">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
   <meta charset="utf-8">
-  <meta name="keywords" content="Serving Champions About">
+  <meta name="keywords" content="Serving Champions">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap">
 </head>
@@ -33,23 +33,24 @@
       <img src="assets/tennis.png" alt="Stephen Chavez playing tennis">
     </section>
     <p>
-      Serving Champions was founded by, Stephen Chavez, a devoted Christian who finds profound joy in sharing his faith through his work, his love for helping others, and dreaming big. He continually acknowledges that without God's grace, he would not have the ability to serve others and strives to live a life following Jesus Christ. 
+      Serving Champions was founded by Stephen Chavez, a devoted Christian who finds profound joy in sharing his faith through his work, his love for helping others, and dreaming big. He continually acknowledges that, without God's grace, he would not have the ability to serve others, and he strives to live a life following Jesus Christ.
     </p>
     <p>
-      Stephen is a dedicated professional with a diverse background in both the political and business worlds. He is a proud graduate of the University of Mississippi with Cum Laude honors in Public Policy Leadership, began his journey with a passion for politics. His early experience as a United States Senate Page ignited his ambition to make a significant impact in the political arena.
+      Stephen is a dedicated professional with a diverse background in both the political and business worlds. He is a proud graduate of the University of Mississippi, where he earned Cum Laude honors in Public Policy Leadership. His passion for politics was ignited early on through his experience as a United States Senate Page, fueling his ambition to make a significant impact in the political arena.
     </p>
     <p>
-      After graduating a year early to work with a national political party in Houston, Texas, Stephen honed his skills through various state-wide campaigns across Mississippi. His growing interest in the analytical side of campaigns led him to pursue specialized training in campaign data management. Stephen's expertise as a Data Director was further developed through managing campaigns and serving in multiple states, including Texas, West Virginia, Louisiana, and Mississippi.
+      After graduating a year early to work with a national political party in Houston, Texas, Stephen continuing to hone his skills through various campaigns across multiple states. His growing interest in the analytical side of campaigns led him to pursue specialized training in campaign data management. Stephen further developed his expertise as a Data Director by managing campaigns and serving in multiple states, including Texas, West Virginia, Louisiana, and Mississippi.
     </p>
     <p>
-      Transitioning from the political sphere, Stephen pursued an MBA at the University of Memphis, graduating Magna Cum Laude with a focus on Web Analytics. This academic achievement propelled him into roles such as Operations Analyst and Business Analyst before taking on his current position as a Product Manager. In this role, Stephen leads a team responsible for managing technical defects across various appraisal vendor management software and collateral quality control solutions in the housing market.
+      Transitioning from the political sphere, Stephen pursued an MBA at the University of Memphis, graduating Magna Cum Laude with a focus on Web Analytics. This academic achievement propelled him into roles such as Operations Analyst and Business Analyst before taking on his current position as a Product Manager. In this role, Stephen leads a team responsible for managing technical defects across multiple appraisal vendor management software and collateral quality control solutions in the housing market.
     </p>
     <p>
-      Driven by a desire to leverage his technical and analytical skills to help others, Stephen established Serving Champions. This LLC aims to assist businesses in creating impactful websites and continues to offer political consulting services to support effective campaigns.
+      Driven by a desire to leverage his technical and analytical skills to help others, Stephen established Serving Champions. This LLC is dedicated to assisting businesses of all sizes and across various industries in creating impactful websites, while also offering consulting services to support effective campaigns.
     </p>
     <p>
       Beyond his professional endeavors, Stephen is passionate about tennis. Whether playing on the court or teaching others the game, tennis remains a beloved hobby and a way for him to connect with people and share his love for the sport.
     </p>
+    
   </section>
 </section>
 </main>
