--- a/about.html
+++ b/about.html
@@ -66,10 +66,10 @@
 
 <section class="socmed">
   <ul>
-      <li><a href="#"><img src="assets/facebookg.png" alt="Facebook"></a></li>
-      <li><a href="#"><img src="assets/twitterg.png" alt="Twitter"></a></li>
-      <li><a href="#"><img src="assets/mailg.png" alt="Email"></a></li>
-      <li><a href="#"><img src="assets/linkeding.png" alt="LinkedIn"></a></li>
+      <li><a href="https://www.facebook.com/servingchampion/"><img src="assets/facebookg.png" alt="Facebook"></a></li>
+      <li><a href="https://x.com/10issteve"><img src="assets/twitterg.png" alt="Twitter"></a></li>
+      <li><a href="mailto:servingchampions@gmail.com"><img src="assets/mailg.png" alt="Email"></a></li>
+      <li><a href="https://www.linkedin.com/in/stephen-chavez/"><img src="assets/linkeding.png" alt="LinkedIn"></a></li>
   </ul>
 </section>
 
