--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     
       <div class="service">
-        <h2>Professional & Financial Development</h2>
+        <h2>Professional Development</h2>
         <p>
           Serving Champions guides you in your professional journey by offering resume refinement, interview preparation, and financial decision-making advice. We also partner with Sweet Magnolia Clay Company to provide hands-on financial literacy classes, where students paint piggy banks while learning essential lessons about financial responsibility and saving for the future.
       </div>
