--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="connect.html">Connect</a></li>
+            <li><a href="connect/connect.html">Connect</a></li>
         </ul>
     </nav>
 </header>
