--- a/services.html
+++ b/services.html
@@ -61,10 +61,10 @@
       </div>
 
       <div class="website">
-        <a href="https://servingchampions.github.io/MovieBuffs/index.html" target="_blank">
-          <img src="assets/moviebuffs.png" alt="Movie Buffs">
+        <a href="unrivaled-marketing.com" target="_blank">
+          <img src="assets/unrivalmark.png" alt="Unrivaled Marketing">
         </a>
-        <p>Movie Buffs <a href="https://servingchampions.github.io/MovieBuffs/blog.html" target="_blank"></a></p>
+        <p>Unrivaled Marketing<a href="unrivaled-marketing.com" target="_blank"></a></p>
       </div>
 
       <div class="website">
@@ -72,6 +72,20 @@
           <img src="assets/cottonwarehouse.png" alt="Cotton Warehouse Market">
         </a>
         <p>Cotton Warehouse Market <a href="https://cottonwarehouse.com" target="_blank"></a></p>
+      </div>
+
+      <div class="website">
+        <a href="https://servingchampions.github.io/MovieBuffs/index.html" target="_blank">
+          <img src="assets/moviebuffs.png" alt="Movie Buffs">
+        </a>
+        <p>Movie Buffs <a href="https://servingchampions.github.io/MovieBuffs/blog.html" target="_blank"></a></p>
+      </div>
+
+      <div class="website">
+        <a href="https://servingchampions.github.io/CLACESCRUMPOKER/" target="_blank">
+          <img src="assets/scrumtool.png" alt="Unrivaled Marketing">
+        </a>
+        <p>Scrum Estimator Tool<a href="https://servingchampions.github.io/CLACESCRUMPOKER/" target="_blank"></a></p>
       </div>
 
     </div>
